k8s-demo/springboot-demo/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: $namespace
  labels:
    name: $namespace
    app: springboot-demo
