k8s-demo/springboot-demo/service_clusterip.yml
kind: Service
apiVersion: v1
metadata:
  name: springboot-demo-$environment
  namespace: $namespace
  labels:
    app: springboot-demo
    environment: $environment
spec:
  type: ClusterIP
  selector:
    app: springboot-demo
    environment: $environment
  ports:
    - name: http
      port: 80
      targetPort: http
